--- a/origami.html
+++ b/origami.html
@@ -67,7 +67,7 @@
         </ul>
         <p>
             Esse é também um tipo de origami bastante tradicional no Japão, tanto quanto o tsuru. Essa flor carrega como
-            simbologia a sabedoria e, na cultura japonesa, é um belo presente de aniversário.
+            simbologia a sabedoria e, na cultura japonesa, é um belo presente de aniversário. <br>
             Dessa forma, a dobradura de iris traz também todo esse significado e presentar alguém com ela significa
             votos de saúde e sabedoria.
         </p>
