--- a/origami.html
+++ b/origami.html
@@ -96,7 +96,7 @@
         </ul>
     </section>
 
-    <section>
+    <aside>
         <h3>Benefícios do Origami</h3>
         <ul>
             <li>Trabalha a coordenação motora fina;</li>
@@ -105,7 +105,7 @@
             <li>Exercita a atenção plena (mindfullness);</li>
             <li>Oferece uma atividade prazerosa;</li>
         </ul>
-    </section>
+    </aside>
 
 
     <footer>
